# scratch-llvm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: llscratch.cpp
src/include/scratch-llvm/: istream-wrappers.hpp  multi_istream.hpp  parse_map.hpp
tests/cpp/: 01_empty_main.cpp  02_optimisation_test.cpp
